--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
+
 project(OpenGL_TicTacToe)
 
-set(CMAKE_CXX_STANDARD 20)
-
-add_executable(OpenGL_TicTacToe main.cpp)
+add_subdirectory(libraries)
+add_subdirectory(code)
